# IndustrialCPP_HW

./: CMakeLists.txt  README.md  main.cpp
include/: set.hpp
tests/: CMakeLists.txt  integration_tests.py  tests.cpp
